# homevent

./: Cargo.toml
gnome-extension/vent-status@s31.sh/: extension.js  metadata.json  stylesheet.css
src/: main.rs
