[package]
name = "homevent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
float-ord = "0.3.2"
pid = "4.0.0"
reqwest = { version = "0.13.4", features = ["json"] }
rpi-pal = { version = "0.22.3", features = ["hal"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "sync"] }
